--- a/about.html
+++ b/about.html
@@ -48,13 +48,16 @@
 
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
-
       <!-- <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
       <img src="assets/img/logo.webp" alt="">
-      <h1 class="sitename">FolioOne</h1> 
-    </a> -->
+      <h1 class="sitename">FolioOne</h1> </a> -->
+      <div class="header-social-links">
+        <a class="logo-head" href="#">
+          <img src="assets/img/logo-head.png" alt="">
+        </a>
+      </div>
 
-      <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="navmenu">        
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" class="active">About</a></li>
@@ -97,10 +100,9 @@
 
     <!-- & About Section -->
     <section id="about" class="about section">
-
       <!--| Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <img src="assets/img/logo-lan.png" alt="Logo LAN"><h2>LA Networks</h2>
+        <h2>LA Networks</h2>
         <p>Encontrar formas creativas e innovadoras, para poder llevar los beneficios de las Tecnologías de Información y Telecomunicaciones a las empresas medianas y pequeñas, como nuestro aporte profesional a la Sociedad Mexicana que nos permita tener una empresa rentable.</p>
       </div>
       <!-- |End Section Title -->
@@ -563,7 +565,7 @@
 
     <div class="container">
       <div class="text-center mb-5">
-        <h2><img src="assets/img/logo-lan.png" alt="Logo-Network">LA Networks </h2> 
+        <h2><img class="logo" src="assets/img/logo-lan.png" alt="Logo-Network">LA Networks </h2> 
       </div>
       <div class="footer-tittle">
         <div class="row">
