Se agrego los url del footer

--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - FolioOne Bootstrap Template</title>
+  <title>LA-Network</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo-head.png" rel="icon">
+  <link href="assets/img/logo-lan.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -59,8 +59,8 @@
 
       <nav id="navmenu" class="navmenu">        
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="#DataG" class="active">Datos Generales</a></li>
+          <li><a href="#Inicio" class="active">Inicio</a></li>
+          <li><a href="#DataG">Datos Generales</a></li>
           <li><a href="#contact">Informacion Adicional</a></li>
           <!-- <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
@@ -97,16 +97,16 @@
   </header>
 
   <main class="main">
-
-    <!-- & About Section -->
-    <section id="DataG" class="about section">
+    <section id="Inicio" class="stats section">
       <!--| Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>LA Networks</h2>
-        <p>Encontrar formas creativas e innovadoras, para poder llevar los beneficios de las Tecnologías de Información y Telecomunicaciones a las empresas medianas y pequeñas, como nuestro aporte profesional a la Sociedad Mexicana que nos permita tener una empresa rentable.</p>
+        <p>Desarrollo y validación de métodos fisicoquímicos y biológicos, transferencia de tecnologías y capacitación a personal.</p>
       </div>
       <!-- |End Section Title -->
-
+    </section>
+    <!-- & About Section -->
+    <section id="DataG" class="about section dark-background">
       <!-- | Body -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row align-items-center justify-content-between gy-5 mb-5">
@@ -120,16 +120,16 @@
                 <div class="col-12 col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="120">
                   <div class="fact-pill">
                     <i class="bi bi-envelope"></i>
-                    <strong>Correo:</strong> <span>luis@inet-mx.net</span>
+                    <strong>Correo:</strong> <span>luis@lanetworks-mx.net</span>
                   </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="160">
+                <div class="col-12 col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="200">
                   <div class="fact-pill">
                     <i class="bi bi-globe"></i>
-                    <strong>Web:</strong><span>https://inet-mx.net</span>
+                    <strong>Web:</strong><span>https://lanetworks-mx.net/</span>
                   </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="200" >
+                <div class="col-12 col-md-6 col-lg-6" data-aos="zoom-in" data-aos-delay="160" >
                   <div class="fact-pill">
                     <a href="https://api.whatsapp.com/send?phone=5215569697320&text=¡Hola!%20Quiero%20saber%20más%20de%20iNet." target="_blank"> <i class="bi bi-whatsapp"></i> <strong>Whatsapp</strong></a>
                   </div>
@@ -304,32 +304,29 @@
 
       </div>
       <!-- | EndBody -->
-
     </section>
     <!-- & /About Section -->
 
     <!-- & Contac Section -->
-     <!-- Contact Section -->
     <section id="contact" class="contact section">
-
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Luis Mario López Burgos</h2>
-        <p>Soluciones integrales de TI para la creación de un ambiente más seguro.</p>
-      </div><!-- End Section Title -->
-
+        <p>Soluciones integrales para la creación de un ambiente más seguro.</p>
+      </div>
+      <!-- End Section Title -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
           <div class="col-lg-4">
             <div class="info-box text-center" data-aos="fade-up" data-aos-delay="200">
               <h3>Escanea el codigo QR para mas Informaci&oacute;n</h3>
-              <!-- <div class="row"> -->
+              <div class="row">
                 <div class="col-12 pt-3 pb-3" data-aos="fade-up" data-aos-delay="300">
                   <div class="img-fluid">
                     <img src="assets/img/Contact/qr-Luis.png" alt="QR-Luis">
                   </div>
                 </div>
-              <!-- </div> -->
+              </div>
               <p>Escaneame</p> 
             </div>
           </div>
@@ -353,7 +350,6 @@
         </div>
       </div>
     </section>
-    <!-- /Contact Section -->
     <!-- & /EndContact Section -->
     
     
@@ -473,19 +469,22 @@
               <h4 class="text-info">Servicios</h4>
               <ul>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Equipos</a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/instrumentacion_analitica.php">Instrumentación Analítica</a>
                 </li>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Soluciones para la Industria </a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/equipos.php">Equipos</a>
                 </li>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Estudios de Estabilidad</a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/soluciones_industria.php">Soluciones para la Industria </a>
                 </li>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Cuartos Clim&aacute;ticos</a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/estudios_estabilidad.php">Estudios de Estabilidad</a>
                 </li>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Automatizaci&oacute;n</a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/cuartos_climaticos.php">Cuartos Clim&aacute;ticos</a>
+                </li>
+                <li class="list-unstyled ">
+                  <a class="link-secondary" href="https://lanetworks-mx.net/automatizacion.php">Automatizaci&oacute;n</a>
                 </li>
               </ul>
             </div>
@@ -495,16 +494,16 @@
               <h4 class="text-info">LA Networks</h4>
               <ul>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Quienes Somos</a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/quienes_somos.php">Quienes Somos</a>
                 </li>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Clientes</a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/clientes.php">Clientes</a>
                 </li>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Contacto</a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/contacto.php">Contacto</a>
                 </li>
                 <li class="list-unstyled ">
-                  <a class="link-secondary" href="#">Aviso de Privacidad</a>
+                  <a class="link-secondary" href="https://lanetworks-mx.net/aviso_privacidad.php">Aviso de Privacidad</a>
                 </li>
               </ul>
             </div>
@@ -513,9 +512,10 @@
             <div class="footer-tittle">
               <h4 class="text-center text-info">Contacto</h4>
               <div class="social-links d-flex justify-content-center">
-                <a href="https://twitter.com/LANETWORKSSMAR1" target="_blank" class="twitter"><i class="bi bi-twitter-x"></i></a>
                 <a href="https://www.facebook.com/L-A-Networks-Smart-T-802026873507816/" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="https://www.instagram.com/lanetworkssmartt/?hl=es-la" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=525575443407&amp;text=%C2%A1Hola!%20Quisiera%20información%20sobre%20LA%20Networks,%20busco%20una%20cotización." target="_blank" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://twitter.com/LANETWORKSSMAR1" target="_blank" class="twitter"><i class="bi bi-twitter-x"></i></a>
                 <!-- <a href=""><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
@@ -536,11 +536,11 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://lupware.com/">Lupware</a>
+        Diseñado por <a href="https://lupware.com/">Lupware</a>
       </div>
     </div>
 
-   <!--  <div class="container">
+    <!--  <div class="container">
       <div class="copyright text-center ">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
@@ -558,9 +558,7 @@
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div> -->
-
   </footer>
-
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
